2004-01-08  Marcus Meissner <marcus@jet.franken.de>
	
	From Mark Slemko <slemkom@users.sourceforge.net>
	* dlink350f.c, dlink350f.h, pdc640.c:
 	  Orientation, byte order, and brightness correction for the
	  D-Link 350F

2004-01-04  Marcus Meissner <marcus@jet.franken.de>

	* pdc640.c: Use different names for Skanhex SX-35, or 
	  the lower level gets confused.

2003-12-28  Lutz Mueller <lutz@users.sourceforge.net>

	* pdc640.c: Martin Sarfy <sarfy@ics.muni.cz> reports that his camera
	  (Trust 350FT PowerC@m FLASH, 0x6d6:0x2d) works using the driver
	  for 0x6d6:0x2e.

2003-09-15  Marcus Meissner <marcus@jet.franken.de>
	
	Reported by Andreas Kies:

	* pdc640.c: Remove :, since ability.mode again
	  contains names without :, or we do not find
	  our cameras.
	  Use flip_both for UMAX AstraPix.

2003-05-15  Lutz Mueller <lutz@users.sourceforge.net>

	Patch by Drew Sullivan <drew@pentagon.ss.org>:

	* pdc640.c: Correctly post-process images taken by a SiPix:Stylecam.

2003-05-13  Marcus Meissner <marcus@jet.franken.de>
	
	* pdc640.c, jd350e.c, jd350e.h: Applied Trustcam 350FS
	  fix from Hans de Goede <j.w.r.degoede@hhs.nl>

2003-04-26  Marcus Meissner <marcus@jet.franken.de>
	
	* pdc640.c: compression type 1 appears to be just
	  like compression type 2, at least for the SiPix
	  Stylecam.

2003-04-17  Marcus Meissner <marcus@jet.franken.de>
	
	* pdc640.c: Added SiPix StyleCam (0x0d64/0x1001),
	  UMAX AstraPix 320s (same) and DLINK DSC-350F
	  (0xd64/0x1021).

2003-03-02  Marcus Meissner <marcus@jet.franken.de>
	
	* pdc640.c,jd350e.[ch]: Meade binocs need filter and
	  flip vertical. Renamed rotate180 to flip_vertical.

2003-02-25  Marcus Meissner <marcus@jet.franken.de>
	
	* pdc320.c,h: Rewritten the command/reply handling
	  to a large degree after reverse engineering the
	  windows driver.

	* pdc320.html: Started documenting the command structure.

2003-02-18  Marcus Meissner <marcus@jet.franken.de>
	
	* pdc640.c: Added ScopeCam (www.meade.com).
